Add html for the poem

--- a/index.html
+++ b/index.html
@@ -7,6 +7,68 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-
+    <h1>Na straganie</h1>
+    <h2>Jan Brzechwa</h2>
+    <p>
+      Na straganie w dzień targowy <br>
+      Takie słyszy się rozmowy: <br>
+      <br>
+      "Może pan się o mnie oprze,<br>
+      Pan tak więdnie, panie koprze."<br>
+      <br>
+      "Cóż się dziwić, mój szczypiorku,<br>
+      Leżę tutaj już od wtorku!"<br>
+      <br>
+      Rzecze na to kalarepka:<br>
+      "Spójrz na rzepę - ta jest krzepka!"<br>
+      <br>
+      Groch po brzuszku rzepę klepie:<br>
+      "Jak tam, rzepo? Coraz lepiej?"<br>
+      <br>
+      "Dzięki, dzięki, panie grochu,<br>
+      Jakoś żyje się po trochu.<br>
+      <br>
+      Lecz pietruszka - z tą jest gorzej:<br>
+      Blada, chuda, spać nie może."<br>
+      <br>
+      "A to feler" -<br>
+      Westchnął seler.<br>
+      <br>
+      Burak stroni od cebuli,<br>
+      A cebula doń się czuli:<br>
+      <br>
+      "Mój Buraku, mój czerwony,<br>
+      Czybyś nie chciał takiej żony?"<br>
+      <br>
+      Burak tylko nos zatyka:<br>
+      "Niech no pani prędzej zmyka,<br>
+      <br>
+      Ja chcę żonę mieć buraczą,<br>
+      Bo przy pani wszyscy płaczą."<br>
+      <br>
+      "A to feler" -<br>
+      Westchnął seler.<br>
+      <br>
+      Naraz słychać głos fasoli:<br>
+      "Gdzie się pani tu gramoli?!"<br>
+      <br>
+      "Nie bądź dla mnie taka wielka" -<br>
+      Odpowiada jej brukselka.<br>
+      <br>
+      "Widzieliście, jaka krewka!" -<br>
+      Zaperzyła się marchewka.<br>
+      <br>
+      "Niech rozsądzi nas kapusta!"<br>
+      "Co, kapusta?! Głowa pusta?!"<br>
+      <br>
+      A kapusta rzecze smutnie:<br>
+      "Moi drodzy, po co kłótnie,<br>
+      <br>
+      Po co wasze swary głupie,<br>
+      Wnet i tak zginiemy w zupie!"<br>
+      <br>
+      "A to feler" -<br>
+      Westchnął seler.
+    </p>
   </body>
 </html>
